objects/Construction_Project__c.object
<CustomObject>
    <description>Represents the Installation Progress at the Site in which individual station locations (LIN)s are to be installed at.</description>
    <fields>
        <fullName>ADA_Accessibility_Notes__c</fullName>
        <label>ADA Accessibility Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AHJ_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>AHJ Account</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Must point to Authority Having Jurisdiction (AHJ) Account Type</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Authority Having Jurisdiction (AHJ)</value>
            </filterItems>
            <infoMessage>Create the account if it does not already exist.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Construction Projects (Municipality Account)</relationshipLabel>
        <relationshipName>Construction_Projects6</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AccruedUnApprovedExpenseTotal__c</fullName>
        <description>Concur Field</description>
        <inlineHelpText>Concur Field</inlineHelpText>
        <label>Accrued UnApproved Expense Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Add_Information__c</fullName>
        <label>Add. Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Install_Cost__c</fullName>
        <description>The amount put in this field adds to the Total Install Cost field at the top of the construction Project. Use it to track A\ any additional expenses associated with scope of  project that is not Permit, Engineering, Install, or Striping. Make sure that the Invoice is in the DropBox for Salesforce Construction Project.</description>
        <inlineHelpText>The amount put in this field adds to the Total Install Cost field at the top of the construction Project. Use it to track A\ any additional expenses associated with scope of  project that is not Permit, Engineering, Install, or Striping.</inlineHelpText>
        <label>Additional Install Cost</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Additional_Install_Notes__c</fullName>
        <label>Additional Install Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Advertising_Information__c</fullName>
        <label>Advertising Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Anchor_Stores__c</fullName>
        <label>Anchor Stores</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Avg_Age__c</fullName>
        <label>Avg. Age</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Avg_HH_Income__c</fullName>
        <label>Avg, HH Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Biz_Dev_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Construction Projects</relationshipLabel>
        <relationshipName>Construction_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bollards_Required__c</fullName>
        <label>Bollards Required</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Required</fullName>
                </value>
                <value>
                    <fullName>Bolt On</fullName>
                </value>
                <value>
                    <fullName>Surface Mounted - Rebar Reinforced</fullName>
                </value>
                <value>
                    <fullName>Poured In Place</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CD_90s_Review__c</fullName>
        <inlineHelpText>Construction Drawings submitted to Volta for review.</inlineHelpText>
        <label>CD 90s - Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CD_S_S__c</fullName>
        <inlineHelpText>Construction drawings are signed and sealed.  Ready to be submitted for review by jurisdiction.</inlineHelpText>
        <label>CD S&amp;S</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CapEx_Approval_Amount__c</fullName>
        <description>The amount (up to but not to exceed) that this project has been approved for construction. This amount does not include the station itself (hardware).</description>
        <inlineHelpText>The amount (up to but not to exceed) that this project has been approved for construction. This amount does not include the station itself (hardware).</inlineHelpText>
        <label>CapEx Construction Approval Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CapEx_Approval_Date__c</fullName>
        <description>This is when the CapEx Committee Approved Construction for this project.</description>
        <inlineHelpText>This is when the CapEx Committee Approved Construction for this project.</inlineHelpText>
        <label>CapEx Construction Approval Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CapEx_Approval_Notes__c</fullName>
        <label>CapEx Construction Approval Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CapEx_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CapEX Approval</description>
        <inlineHelpText>CapEX Approval</inlineHelpText>
        <label>CapEx Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Charge_Access_Date__c</fullName>
        <description>Date drivers are able to start charging their vehicle. Not a projected date - fill in only after this has been completed</description>
        <inlineHelpText>Date drivers are able to start charging their vehicle. Not a projected date - fill in only after this has been completed</inlineHelpText>
        <label>Charge Access Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_No_Account__c</fullName>
        <formula>Biz_Dev_Opportunity__r.Account.Client_Code_No__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client No (Account)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_No__c</fullName>
        <label>Client No</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closest_Public_EVSE_by_type__c</fullName>
        <label>Closest Public EVSE (by type)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Closest_Public_EVSE_in_miles__c</fullName>
        <label>Closest Public EVSE (in miles)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Completion_Date__c</fullName>
        <description>This is an estimated date during the CP lifecycle. This estimate turns into a firm and non-changeable date once he CP moves to stage &apos;complete&apos; and the station launch checklist has been confirmed to be fully executed.</description>
        <inlineHelpText>This is an estimated date during the CP lifecycle. This estimate turns into a firm and non-changeable date once he CP moves to stage &apos;complete&apos; and the station launch checklist has been confirmed to be fully executed.</inlineHelpText>
        <label>Expected Launch Checklist Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Confidence__c</fullName>
        <description>For use by Ops management to track confidence in expected completion date</description>
        <inlineHelpText>For use by Ops management to track confidence in expected completion date</inlineHelpText>
        <label>Confidence</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Solid</fullName>
                </value>
                <value>
                    <fullName>Likely</fullName>
                </value>
                <value>
                    <fullName>Possible</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contracts__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contracts</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Construction Projects</relationshipLabel>
        <relationshipName>Construction_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Counter_Hours__c</fullName>
        <label>Counter Hours</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EV_Only_Signage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does this site have EV Only signage installed?
If yes, click the box
We must have signage up before we can tow.</description>
        <inlineHelpText>Does this site have EV Only signage installed?
If yes, click the box
We must have signage up before we can tow.</inlineHelpText>
        <label>EV Only Signage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EVs_by_State__c</fullName>
        <label>EVs by State</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ease_of_Installation__c</fullName>
        <inlineHelpText>Estimate difficulty from 1-3 (3 being the most difficult)</inlineHelpText>
        <label>Ease of Installation</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Elec_Permit_Application_Date__c</fullName>
        <description>The date CDs were submitted to municipality for permit.</description>
        <label>Elec. Permit Application Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Elec_Permit_Issue_Date__c</fullName>
        <label>Elec. Permit Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Elec_Permit_Number__c</fullName>
        <label>Elec. Permit Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Elec_Permit_Type__c</fullName>
        <label>Elec. Permit Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Full Submittal</fullName>
                </value>
                <value>
                    <fullName>OTC</fullName>
                </value>
                <value>
                    <fullName>Online Permit</fullName>
                </value>
                <value>
                    <fullName>Scheduled Appointment - OTC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Elec_Source__c</fullName>
        <description>REIT House Power: Electricity supplied by the Center, Complex or Mal (ex. GGP House Panel.
Tenant Power:  Electricity supplied by the tenant (ex. Whole Foods Sub Panel).
Utility Power:  Electricity supplied directly by utility company (ex. PG&amp;E, SE and COMED)</description>
        <label>Elec. Supply Source</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>REIT House Power</fullName>
                </value>
                <value>
                    <fullName>Tenant Power</fullName>
                </value>
                <value>
                    <fullName>Utility Power</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Electrical_Permit_Req__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Electrical Permit Req.</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Electricity_Turned_On__c</fullName>
        <label>Electricity Turned On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Enforcement_Tow__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the account of the business that will tow an offending driver from our spots.</description>
        <inlineHelpText>This is the account of the business that will tow an offending driver from our spots.</inlineHelpText>
        <label>Enforcement Tow</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Construction Projects (Enforcement Tow)</relationshipLabel>
        <relationshipName>Construction_Projects5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Engineer_of_Record__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Engineer of Record</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Construction Projects (Engineer of Record)</relationshipLabel>
        <relationshipName>Construction_Projects3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Engineering_Cost__c</fullName>
        <description>Input all engineer cost associated with project.</description>
        <label>Engineering Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Existing_Public_EVs_on_site__c</fullName>
        <label>Existing Public EVs on-site</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Facilities_Manager_Email__c</fullName>
        <label>Facilities Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Facilities_Manager__c</fullName>
        <label>Facilities Manager</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facilities_Phone__c</fullName>
        <label>Facilities Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>FinalExpenseTotal__c</fullName>
        <description>Concur Field</description>
        <inlineHelpText>Concur Field</inlineHelpText>
        <label>FinalExpenseTotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Final_Inspection_Date__c</fullName>
        <description>Date the final inspection was passed by AHJ. Not a projected date - fill in only after this has been completed. Use Tasks to schedule and track upcoming inspections.</description>
        <inlineHelpText>Date the final inspection was passed by AHJ. Not a projected date - fill in only after this has been completed. Use Tasks to schedule and track upcoming inspections.</inlineHelpText>
        <label>AHJ Final Inspection Pass Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_Install_Cost__c</fullName>
        <description>Final Install Cost - This amount put in this field adds to the Total Install Cost field at the top of the construction Project.</description>
        <inlineHelpText>Final Install Cost - This amount put in this field adds to the Total Install Cost field at the top of the construction Project.</inlineHelpText>
        <label>Final Install Cost</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GLA_SqFt_Score__c</fullName>
        <label>GLA SqFt Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GLA_SqFt__c</fullName>
        <label>GLA (SqFt)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Google_Map_Neighborhood__c</fullName>
        <formula>IMAGE(&quot;http://maps.google.com/maps/api/staticmap?center=&quot; &amp; Site_Address__c&amp; &quot;,+&quot; &amp; City__c &amp; &quot;+&quot;&amp; State__c&amp;&quot;+&quot;&amp;Zip_Code__c&amp;&quot;&amp;zoom=14&amp;format=png&amp;maptype=roadmap&amp;mobile=false&amp;language=English&amp;markers=|color:Yellow|label:Address|&quot; &amp; Site_Address__c&amp; &quot;,+&quot; &amp; City__c &amp; &quot;+&quot;&amp; State__c&amp;&quot;+&quot;&amp; Zip_Code__c &amp;&quot;&amp;size=350x350&amp;key=&amp;sensor=false&quot;,&quot;Google Maps&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Google Map (Neighborhood</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Google_Map_Regional__c</fullName>
        <formula>IMAGE(&quot;http://maps.google.com/maps/api/staticmap?center=&quot; &amp; Site_Address__c&amp; &quot;,+&quot; &amp; City__c &amp; &quot;+&quot;&amp; State__c&amp;&quot;+&quot;&amp;Zip_Code__c&amp;&quot;&amp;zoom=10&amp;format=png&amp;maptype=roadmap&amp;mobile=false&amp;language=English&amp;markers=|color:Yellow|label:Address|&quot; &amp; Site_Address__c&amp; &quot;,+&quot; &amp; City__c &amp; &quot;+&quot;&amp; State__c&amp;&quot;+&quot;&amp; Zip_Code__c &amp;&quot;&amp;size=350x350&amp;key=&amp;sensor=false&quot;,&quot;Google Maps&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Google Map (Regional)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Google_Map_Site__c</fullName>
        <formula>IMAGE(&quot;http://maps.google.com/maps/api/staticmap?center=&quot; &amp; Site_Address__c&amp; &quot;,+&quot; &amp; City__c &amp; &quot;+&quot;&amp; State__c&amp;&quot;+&quot;&amp;Zip_Code__c&amp;&quot;&amp;zoom=16&amp;format=png&amp;maptype=satellite&amp;mobile=false&amp;language=English&amp;markers=|color:Yellow|label:Address|&quot; &amp; Site_Address__c&amp; &quot;,+&quot; &amp; City__c &amp; &quot;+&quot;&amp; State__c&amp;&quot;+&quot;&amp; Zip_Code__c &amp;&quot;&amp;size=800x800&amp;key=&amp;sensor=false&quot;,&quot;Google Maps&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Google Map (Site)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HHI_Score__c</fullName>
        <label>HHI Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_of_Operation__c</fullName>
        <label>Hours of Operation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Infrastructure_Obstructions__c</fullName>
        <label>Infrastructure Obstructions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fire Hydrant</fullName>
                </value>
                <value>
                    <fullName>Gas Line</fullName>
                </value>
                <value>
                    <fullName>Irrigation</fullName>
                </value>
                <value>
                    <fullName>Landscape Lighting</fullName>
                </value>
                <value>
                    <fullName>Surface Lighting</fullName>
                </value>
                <value>
                    <fullName>Water Line</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Initial_Site_Inspection__c</fullName>
        <label>Initial Site Inspection</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Install_Cost_Estimate__c</fullName>
        <label>Install Cost Estimate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Installation_Code_A__c</fullName>
        <label>Installation Code A</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Installation_Notes__c</fullName>
        <label>Installation Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Installed_Date_passed_inspection__c</fullName>
        <label>Installed Date (passed inspection)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Installer_Company_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Installer (Company) Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Construction Projects (Installer (Company) Name)</relationshipLabel>
        <relationshipName>Construction_Projects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Installer_Contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Installer (Contact) Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Construction Projects (Installer (Contact) Name)</relationshipLabel>
        <relationshipName>Construction_Projects2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Kiosk_Bolted_Down__c</fullName>
        <label>Station Bolted Down</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Kiosk_Exact_Physical_Location_s__c</fullName>
        <label>Kiosk (Exact) Physical Location(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LL_CD90_Approval_Date__c</fullName>
        <label>LL CD90 Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Location_Description_EVSE__c</fullName>
        <label>Location Description (EVSE)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Location_Description_per_Proposal__c</fullName>
        <label>Location Description (per Proposal)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Location_Typology__c</fullName>
        <label>Location Typology</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MSA_US_Census__c</fullName>
        <label>MSA (US Census)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Media_Access_Date__c</fullName>
        <description>Date the station can start showing media to a paying sponsor.  Not a projected date - fill in only after this has been completed</description>
        <inlineHelpText>Date the station can start showing media to a paying sponsor.  Not a projected date - fill in only after this has been completed</inlineHelpText>
        <label>Media Access Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Network_No__c</fullName>
        <label>Network No</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Network_Region__c</fullName>
        <label>Network Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>NorCal</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>Santa Barbara</fullName>
                </value>
                <value>
                    <fullName>Orange County</fullName>
                </value>
                <value>
                    <fullName>San Diego</fullName>
                </value>
                <value>
                    <fullName>Chicago</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>Oregon</fullName>
                </value>
                <value>
                    <fullName>South FL</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>NJ</fullName>
                </value>
                <value>
                    <fullName>NY</fullName>
                </value>
                <value>
                    <fullName>Texas</fullName>
                </value>
                <value>
                    <fullName>Washington DC</fullName>
                </value>
                <value>
                    <fullName>Seattle</fullName>
                </value>
                <value>
                    <fullName>Boston</fullName>
                </value>
                <value>
                    <fullName>Atlanta</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>On_Site_EVSE_Code__c</fullName>
        <label>On-Site EVSE Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opp_City__c</fullName>
        <formula>Biz_Dev_Opportunity__r.City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_Close__c</fullName>
        <formula>Biz_Dev_Opportunity__r.CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opp_Close_to_Completion__c</fullName>
        <formula>(Completion_Date__c -  Opp_Close__c)/7</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp Close to Completion in Weeks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opp_Network_Region_No__c</fullName>
        <formula>Biz_Dev_Opportunity__r.Network_No_b__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp Network Region No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_Network_Region__c</fullName>
        <formula>TEXT(Biz_Dev_Opportunity__r.Network_Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp Network Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_Site_A__c</fullName>
        <formula>Biz_Dev_Opportunity__r.Site_Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp Site Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_State__c</fullName>
        <formula>Biz_Dev_Opportunity__r.State__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_Zip_Code__c</fullName>
        <formula>Biz_Dev_Opportunity__r.Zip_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp Zip Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ops_Access_and_Site_Info__c</fullName>
        <formula>Primary_Account__r.Ops_Access_and_Site_Info__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ops Access and Site Info</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Noteworthy_Terms__c</fullName>
        <label>Other Noteworthy Terms</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Permit_Information__c</fullName>
        <label>Other Permit Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Permit_Req__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other Permit Req.</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PO_Issued__c</fullName>
        <description>Date in which Purchase Order was issued from Volta to the Install Company.</description>
        <inlineHelpText>Date in which Purchase Order was issued from Volta to the Install Company.</inlineHelpText>
        <label>PO Issued</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Parking__c</fullName>
        <label>Parking</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Permit_Cost__c</fullName>
        <description>Cost of the Permit from the Authority Having Jurisdiction (AHJ), aka city/county/etc. By entering a number you&apos;ve acknowledged that you&apos;ve uploaded the required permit scan into the dropbox for salesforce folder.</description>
        <inlineHelpText>Cost of the Permit from the Authority Having Jurisdiction (AHJ), aka city/county/etc. By entering a number you&apos;ve acknowledged that you&apos;ve uploaded the required permit scan into the dropbox for salesforce folder.</inlineHelpText>
        <label>Permit Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Permit_Expiration_Date__c</fullName>
        <label>Permit Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Permit_Priority__c</fullName>
        <label>Permit Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Critical</fullName>
                    <default>true</default>
                    <label>1 - Critical</label>
                </value>
                <value>
                    <fullName>2 - High</fullName>
                </value>
                <value>
                    <fullName>3 - Standard</fullName>
                </value>
                <value>
                    <fullName>4 - Low</fullName>
                </value>
                <value>
                    <fullName>5 - Lowest</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Permiting_Notes__c</fullName>
        <label>Permiting Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phase__c</fullName>
        <formula>Text(Biz_Dev_Opportunity__r.Phase__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phase</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_on_site__c</fullName>
        <label>Phone (on-site)</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Planned_Production_Build__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the PB that the construction project Locations will most likely receive their Stations from.</description>
        <inlineHelpText>This is the PB that the construction project Locations will most likely receive their Stations from.</inlineHelpText>
        <label>Planned Production Build</label>
        <referenceTo>Production_Build__c</referenceTo>
        <relationshipLabel>Construction Projects</relationshipLabel>
        <relationshipName>Construction_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Platinum_Trophy_Site__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Platinum (Trophy) Site</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Population__c</fullName>
        <label>Population</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price_of_Installation__c</fullName>
        <label>Price of Installation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Primary_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Site</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Construction Projects</relationshipLabel>
        <relationshipName>Construction_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Launch_Date__c</fullName>
        <label>Project Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Notes__c</fullName>
        <label>Project Notes</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Property_No__c</fullName>
        <displayFormat>{0000}</displayFormat>
        <label>Property No</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Property_Owner_Account__c</fullName>
        <formula>Biz_Dev_Opportunity__r.Property_Owner_Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property Owner Account</label>
        <type>Text</type>
    </fields>
</CustomObject>